# properties-webcrawler

./: .env-examples  README.md  pyproject.toml
redis_keys/: imovirtual.json  sapo.json
src/: main.py
src/request/: default_crawler.py  generic_crawler.py
src/tools/: mogodb.py  mongodb.py
tests/: test_integration.py  test_response.py
