[tool.poetry]
name = "properties-crawler"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
taskipy = "^1.12.2"
pymongo = "^4.6.3"
redis = "^5.0.4"
pytest = "^8.1.1"
pytest-dependency = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
main = "python src/main.py"
test_integrations = "pytest tests/test_integration.py -v"
test_responses = "pytest tests/test_response.py -v"
